# ggml-viz

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ERROR_TESTING_GUIDE.md  INJECTION_GUIDE.md  LICENSE  LLAMA_DEMO_GUIDE.md  Makefile  PERFORMANCE_REPORT.md  README.md  TESTING_GUIDE.md  TODO.md  USER_GUIDE.md  USER_GUIDE2.md  VISUALIZER_TUTORIAL.md  build_llama_test.sh  cmake-trace.txt  cmake_install.cmake  compile_commands.json  ggml-viz.json  imgui.ini  llama_demo_config.json  memory_test_config.json  metal_test.stderr  run_llama_demo.sh  simple_ggml_test  simple_ggml_test.cpp  simple_test  simple_test.cpp  test_ggml_functions.cpp  test_injection.cpp  test_interception.cpp  test_live_system  test_live_system.cpp  test_trace_reader.cpp  test_trace_simple  test_trace_simple.cpp
.github/workflows/: ci.yml
autogenerated/: ggml-metal-embed.metal  ggml-metal-embed.metal.tmp  ggml-metal-embed.s
benchmark_results/: memory_20250701_163744.csv  memory_20250710_113828.csv  timing_20250701_163744.csv  timing_20250710_113828.csv
build-release/: CTestTestfile.cmake  Makefile  compile_commands.json
build-release/src/: Makefile
build-release/tests/: CTestTestfile.cmake  Makefile
docs/: BENCHMARKING.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LOGGING_USAGE.md  Manifesto.md  RING_BUFFER_ANALYSIS.md  THIRD_PARTY.md  architecture.md  ggmlviz.md
examples/: CMakeLists.txt  run_demos.ps1  run_demos.sh
examples/llama_demo/: CMakeLists.txt  run_llama_demo.ps1  run_llama_demo.sh  run_llama_vis.cpp
examples/whisper_demo/: CMakeLists.txt  run_whisper_demo.ps1  run_whisper_demo.sh  run_whisper_vis.cpp  whisper_demo_config.json
scripts/: benchmark.sh  format.sh  inject_linux.sh  inject_macos.sh  inject_windows.bat  lint.sh  run_tests.sh  simple_benchmark.sh  test_loading.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake  libggml_viz_hook.0.1.dylib  libggml_viz_hook.dylib  main.cpp
src/frontend/: imgui_app.cpp  imgui_app.hpp  imgui_widgets.cpp  imgui_widgets.hpp
src/instrumentation/: cuda_wrap.cpp  dyld_interpose.cpp  dyld_interpose_simple.cpp  ggml_hook.cpp  ggml_hook.hpp  ggml_viz_init.cpp  linux_interpose.cpp  sched_interpose.cpp  sched_interpose.mm  win32_interpose.cpp
src/ipc/: ipc_common.hpp  shm_posix.cpp  shm_windows.cpp
src/plugins/: plugins_api.hpp
src/server/: data_collector.cpp  data_collector.hpp  data_structs.hpp  live_data_collector.hpp  server_core.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp  trace_reader.cpp  trace_reader.hpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  test_config.cpp  test_ggml_hook.cpp  test_logger.cpp  test_memory_hooks.cpp  test_ring_buffer.cpp  test_trace_reader.cpp
tests/assets/: test_graph.dot  test_trace.ggmlviz
tests/demo/: demo_metal_hooks.sh
tests/integration/: demo_live_mode_with_llama.sh  download_test_model.sh
tests/manual/: controlled_test  controlled_test.cpp  minimal_test  minimal_test.cpp  simple_test.cpp  test_direct_hooks  test_direct_hooks.cpp  test_ggml_hook  test_git_commands.sh  test_interpose  test_interpose.c  test_symbol_override  test_symbol_override.c
